# arisu

./: .env.example  .gitignore  README.md  compose.yml  main.py  pyproject.toml
commands/: __init__.py  dict.py  drug.py  duckhunt.py  gondola.py  gpt.py  help.py  letterboxd.py  over.py  quote.py  reminder.py  roulette.py  sed.py  seen.py  tell.py  toss.py  ud.py  weather.py  yt.py
utils/: db.py  logger.py
